CHANGES IN FLTK 1.1.0

	- Documentation updates.
	- The mouse pointer now changes to the I beam
	  (FL_CURSOR_INSERT) when moved over an input field or
	  text widget.
	- "make install" didn't automatically (re)compile the
	  FLUID executable.
	- Added an Fl::get_boxtype() method to get the current
	  drawing function for a specific box type.
	- Fl_Output and Fl_Multiline_Output didn't prevent
	  middle-mouse pastes.
	- Fl_JPEG_Image didn't compile out-of-the-box with Cygwin
	  due to a bug in the Cygwin JPEG library headers.
	- Fl_BMP_Image still didn't work with some old BMP files.
	- "make distclean" didn't really clean out everything.
	- Tweeked the look of the check button with a patch from
	  Albrecht Schlosser.


CHANGES IN FLTK 1.1.0rc5

	- Added "wrap" type bit to Fl_Input_, so you can now
	  have a multiline text field that wraps text.
	- Setting the value() of an output text field no longer
	  selects the text in it.
	- Output text fields now show a caret for the cursor
	  instead of the vertical bar.
	- The newButton and previewButton widgets are now public
	  members of the Fl_File_Chooser class.  This allows
	  developers to disable or hide the "new directory" and
	  "preview" buttons as desired.
	- Added new visible focus flag bit and methods to
	  Fl_Widget, so it is now possible to do both global and
	  per-widget keyboard focus control.
	- Removed extra 3 pixel border around input fields.
	- No longer quote characters from 0x80 to 0x9f in input
	  fields.
	- Improved speed of Fl_Browser_::display() method with
	  large lists (patch from Stephen Davies.)
	- Fl_Help_View didn't properly handle NULL from the link
	  callback (the original filename/directory name were
	  not preserved...)
	- Fl_Help_View didn't use the boxtype border values when
	  clipping the page that was displayed.
	- Added first steps to CodeWarrior/OS_X support (see
	  fltk-1.1.x/CodeWarrior/OS_X.sit)
	- Cleaned up the WIN32 export definitions for some of
	  the widget classes.